--- a/intransitive.ipynb
+++ b/intransitive.ipynb
@@ -96,9 +96,10 @@
     "from collections import Counter\n",
     "import itertools as it\n",
     "from fractions import Fraction\n",
+    "from pprint import pprint\n",
     "\n",
     "n = 23 #define the number of dice\n",
-    "p = 3 #define the number of players\n",
+    "p = 3 #define the number of adversaries\n",
     "\n",
     "#define a function that shows which die wins\n",
     "wins = lambda d1, d2: np.sign(sum([1 if i>j else 0 if i==j else -1 for i in d1 for j in d2]))\n",
@@ -118,7 +119,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(11, 34, 57, 80, 103, 126, 149, 172, 195, 218, 241), (12, 23, 65, 86, 107, 129, 144, 174, 188, 208, 250), (13, 35, 50, 69, 111, 132, 139, 176, 204, 221, 236), (14, 24, 58, 75, 92, 135, 157, 178, 197, 211, 245), (15, 36, 66, 81, 96, 115, 152, 180, 190, 224, 231), (16, 25, 51, 87, 100, 118, 147, 182, 206, 214, 240), (17, 37, 59, 70, 104, 121, 142, 161, 199, 227, 249), (18, 26, 67, 76, 108, 124, 160, 163, 192, 217, 235), (19, 38, 52, 82, 112, 127, 155, 165, 185, 207, 244), (20, 27, 60, 88, 93, 130, 150, 167, 201, 220, 230), (21, 39, 68, 71, 97, 133, 145, 169, 194, 210, 239), (22, 28, 53, 77, 101, 136, 140, 171, 187, 223, 248), (0, 40, 61, 83, 105, 116, 158, 173, 203, 213, 234), (1, 29, 46, 89, 109, 119, 153, 175, 196, 226, 243), (2, 41, 54, 72, 113, 122, 148, 177, 189, 216, 252), (3, 30, 62, 78, 94, 125, 143, 179, 205, 229, 238), (4, 42, 47, 84, 98, 128, 138, 181, 198, 219, 247), (5, 31, 55, 90, 102, 131, 156, 183, 191, 209, 233), (6, 43, 63, 73, 106, 134, 151, 162, 184, 222, 242), (7, 32, 48, 79, 110, 137, 146, 164, 200, 212, 251), (8, 44, 56, 85, 114, 117, 141, 166, 193, 225, 237), (9, 33, 64, 91, 95, 120, 159, 168, 186, 215, 246), (10, 45, 49, 74, 99, 123, 154, 170, 202, 228, 232)]\n"
+      "[(11, 34, 57, 80, 103, 126, 149, 172, 195, 218, 241),\n",
+      " (12, 23, 65, 86, 107, 129, 144, 174, 188, 208, 250),\n",
+      " (13, 35, 50, 69, 111, 132, 139, 176, 204, 221, 236),\n",
+      " (14, 24, 58, 75, 92, 135, 157, 178, 197, 211, 245),\n",
+      " (15, 36, 66, 81, 96, 115, 152, 180, 190, 224, 231),\n",
+      " (16, 25, 51, 87, 100, 118, 147, 182, 206, 214, 240),\n",
+      " (17, 37, 59, 70, 104, 121, 142, 161, 199, 227, 249),\n",
+      " (18, 26, 67, 76, 108, 124, 160, 163, 192, 217, 235),\n",
+      " (19, 38, 52, 82, 112, 127, 155, 165, 185, 207, 244),\n",
+      " (20, 27, 60, 88, 93, 130, 150, 167, 201, 220, 230),\n",
+      " (21, 39, 68, 71, 97, 133, 145, 169, 194, 210, 239),\n",
+      " (22, 28, 53, 77, 101, 136, 140, 171, 187, 223, 248),\n",
+      " (0, 40, 61, 83, 105, 116, 158, 173, 203, 213, 234),\n",
+      " (1, 29, 46, 89, 109, 119, 153, 175, 196, 226, 243),\n",
+      " (2, 41, 54, 72, 113, 122, 148, 177, 189, 216, 252),\n",
+      " (3, 30, 62, 78, 94, 125, 143, 179, 205, 229, 238),\n",
+      " (4, 42, 47, 84, 98, 128, 138, 181, 198, 219, 247),\n",
+      " (5, 31, 55, 90, 102, 131, 156, 183, 191, 209, 233),\n",
+      " (6, 43, 63, 73, 106, 134, 151, 162, 184, 222, 242),\n",
+      " (7, 32, 48, 79, 110, 137, 146, 164, 200, 212, 251),\n",
+      " (8, 44, 56, 85, 114, 117, 141, 166, 193, 225, 237),\n",
+      " (9, 33, 64, 91, 95, 120, 159, 168, 186, 215, 246),\n",
+      " (10, 45, 49, 74, 99, 123, 154, 170, 202, 228, 232)]\n"
      ]
     }
    ],
@@ -154,7 +177,7 @@
     "#assert that it works\n",
     "assert not [q for q in it.combinations([[j[0] for j in d if i!=j if wins(i,j)>0] for i in d],p) if not [j for j in range(n) if all(j in k for k in q)]]\n",
     "\n",
-    "print(d)"
+    "pprint(d)"
    ]
   },
   {
@@ -229,14 +252,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: [5, 7, 10, 11, 14, 15, 17, 19, 20, 21, 22], 1: [0, 6, 8, 11, 12, 15, 16, 18, 20, 21, 22], 2: [0, 1, 7, 9, 12, 13, 16, 17, 19, 21, 22], 3: [0, 1, 2, 8, 10, 13, 14, 17, 18, 20, 22], 4: [0, 1, 2, 3, 9, 11, 14, 15, 18, 19, 21], 5: [1, 2, 3, 4, 10, 12, 15, 16, 19, 20, 22], 6: [0, 2, 3, 4, 5, 11, 13, 16, 17, 20, 21], 7: [1, 3, 4, 5, 6, 12, 14, 17, 18, 21, 22], 8: [0, 2, 4, 5, 6, 7, 13, 15, 18, 19, 22], 9: [0, 1, 3, 5, 6, 7, 8, 14, 16, 19, 20], 10: [1, 2, 4, 6, 7, 8, 9, 15, 17, 20, 21], 11: [2, 3, 5, 7, 8, 9, 10, 16, 18, 21, 22], 12: [0, 3, 4, 6, 8, 9, 10, 11, 17, 19, 22], 13: [0, 1, 4, 5, 7, 9, 10, 11, 12, 18, 20], 14: [1, 2, 5, 6, 8, 10, 11, 12, 13, 19, 21], 15: [2, 3, 6, 7, 9, 11, 12, 13, 14, 20, 22], 16: [0, 3, 4, 7, 8, 10, 12, 13, 14, 15, 21], 17: [1, 4, 5, 8, 9, 11, 13, 14, 15, 16, 22], 18: [0, 2, 5, 6, 9, 10, 12, 14, 15, 16, 17], 19: [1, 3, 6, 7, 10, 11, 13, 15, 16, 17, 18], 20: [2, 4, 7, 8, 11, 12, 14, 16, 17, 18, 19], 21: [3, 5, 8, 9, 12, 13, 15, 17, 18, 19, 20], 22: [4, 6, 9, 10, 13, 14, 16, 18, 19, 20, 21]}\n"
+      "{0: [5, 7, 10, 11, 14, 15, 17, 19, 20, 21, 22],\n",
+      " 1: [0, 6, 8, 11, 12, 15, 16, 18, 20, 21, 22],\n",
+      " 2: [0, 1, 7, 9, 12, 13, 16, 17, 19, 21, 22],\n",
+      " 3: [0, 1, 2, 8, 10, 13, 14, 17, 18, 20, 22],\n",
+      " 4: [0, 1, 2, 3, 9, 11, 14, 15, 18, 19, 21],\n",
+      " 5: [1, 2, 3, 4, 10, 12, 15, 16, 19, 20, 22],\n",
+      " 6: [0, 2, 3, 4, 5, 11, 13, 16, 17, 20, 21],\n",
+      " 7: [1, 3, 4, 5, 6, 12, 14, 17, 18, 21, 22],\n",
+      " 8: [0, 2, 4, 5, 6, 7, 13, 15, 18, 19, 22],\n",
+      " 9: [0, 1, 3, 5, 6, 7, 8, 14, 16, 19, 20],\n",
+      " 10: [1, 2, 4, 6, 7, 8, 9, 15, 17, 20, 21],\n",
+      " 11: [2, 3, 5, 7, 8, 9, 10, 16, 18, 21, 22],\n",
+      " 12: [0, 3, 4, 6, 8, 9, 10, 11, 17, 19, 22],\n",
+      " 13: [0, 1, 4, 5, 7, 9, 10, 11, 12, 18, 20],\n",
+      " 14: [1, 2, 5, 6, 8, 10, 11, 12, 13, 19, 21],\n",
+      " 15: [2, 3, 6, 7, 9, 11, 12, 13, 14, 20, 22],\n",
+      " 16: [0, 3, 4, 7, 8, 10, 12, 13, 14, 15, 21],\n",
+      " 17: [1, 4, 5, 8, 9, 11, 13, 14, 15, 16, 22],\n",
+      " 18: [0, 2, 5, 6, 9, 10, 12, 14, 15, 16, 17],\n",
+      " 19: [1, 3, 6, 7, 10, 11, 13, 15, 16, 17, 18],\n",
+      " 20: [2, 4, 7, 8, 11, 12, 14, 16, 17, 18, 19],\n",
+      " 21: [3, 5, 8, 9, 12, 13, 15, 17, 18, 19, 20],\n",
+      " 22: [4, 6, 9, 10, 13, 14, 16, 18, 19, 20, 21]}\n"
      ]
     }
    ],
    "source": [
     "#let's define a winning dictionary\n",
     "w = {i[0]:sorted(j[0] for j in d if wins(i,j)>0) for i in sorted(d)}\n",
-    "print(w)"
+    "pprint(w)"
    ]
   },
   {
@@ -283,7 +328,7 @@
    "id": "cf5a4f3c-12ad-4648-9166-de4f4d5887b4",
    "metadata": {},
    "source": [
-    "There you have it! 11-sided dice that have a 62/151 chance to beat the next die on the list.  That's a 51% but if it works for roulette tables at the casino, it works for me."
+    "There you have it! 11-sided dice that have a 62/121 chance to beat the next die on the list.  That's a 51% but if it works for roulette tables at the casino, it works for me."
    ]
   }
  ],
