--- a/intransitive.ipynb
+++ b/intransitive.ipynb
@@ -774,6 +774,91 @@
    "source": [
     "There you have it! 11-sided dice that have a 62/121 chance to beat the next die on the list.  That's a 51% but if it works for roulette tables at the casino, it works for me."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6997ba07-9251-4078-82af-226a90077537",
+   "metadata": {},
+   "source": [
+    "## Addendum: Why 23 Dice?\n",
+    "\n",
+    "One will note that, from the references in [A362137 on the OEIS](https://oeis.org/A362137), it would seem as though the minimum set of dice required for solving this problem is 19.  So why use 23 dice?\n",
+    "\n",
+    "In order for the constraints on the problem to hold, for some *n* number of dice, the numbers on the dice need to by uniquely valued.  One method of generating uniquely valued dice is to simply use modulo residues, therefore each die has a lowest face that is one cycle of this modulo residue, the next highest on each die is another, and so on.  It should be clear that primes are good candidates for these numbers because composite numbers will generate cycles within the modulo residues.\n",
+    "\n",
+    "Note: I have not worked out the details on *why* the following is true:\n",
+    "\n",
+    "But the other issue is that there's a property that these modulo residues should have which is that they should all add up to a constant value, since this would limit the search space significantly and intuitively seems likely to hold symmetrical-probability non-transitive dice that satisfy an n-player domination tournament, particularly for large (n,p). Consider the transposed (unsorted) o values for n=7 above, that is, a list of sublists, wherein each sublist represents the modulo residue cycles for repeated addition of some value r for the (1-indexed) r-th row:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "16cbd23c-735b-4235-b1cb-a427f7033c2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 4 5 6 0 1 2]\n",
+      " [3 5 0 2 4 6 1]\n",
+      " [3 6 2 5 1 4 0]\n",
+      " [3 0 4 1 5 2 6]\n",
+      " [3 1 6 4 2 0 5]\n",
+      " [3 2 1 0 6 5 4]]\n",
+      "Sums:\n",
+      "[9 9 9 9 9 9 9]\n",
+      "[9 9 9 9 9 9 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cycles = lambda n:(((np.arange(n))*(np.arange(1,n))[:,None]+n//2)%n)\n",
+    "print(cycles(7))\n",
+    "print('Sums:')\n",
+    "print(cycles(7)[[0,1,3]].sum(axis=0))\n",
+    "print(cycles(7)[[2,4,5]].sum(axis=0))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9aaec01e-4aaf-4fdf-bd0e-1679ba1c47e3",
+   "metadata": {},
+   "source": [
+    "One can find a partitioned subset of the rows in the above array that gives constant values.  This only is true for (and I'm not sure why) primes = 7 (mod 8).  So for I have confirmed that this pattern holds for 7, 23, and 31, but not, critically, for 19, (nor any other number below 31). I conjecture that [this list](https://oeis.org/A007522) are the only candidates for n wherein a subset matrix of modulo resides (starting at n//2) along the rows can sum along the columns to a constant value.\n",
+    "\n",
+    "Here is the solution for 23:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d893b745-9251-446e-aaf3-078448e968a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cycles(23)[[0, 1, 2, 3, 5, 7, 8, 11, 12, 15, 17]].sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3757b440-be8d-4a83-ab6c-5583fe4f74cc",
+   "metadata": {},
+   "source": [
+    "Therefore, in the future, if one is looking to solve the five-player non-transitive dice tournament problem, a more likely candidate for the number of dice to look at is 71, rather than 67 even though that is the minimum set for a tournament according to [Reid et al.](https://ajc.maths.uq.edu.au/pdf/29/ajc_v29_p157.pdf) I would also guess that this is why this has remained unsolved until now, because it's intensely computationally difficult to remove those constraints (that rule out 19) and find a set of non-transitive dice under those conditions that satisfies the directed tournament graph."
+   ]
   }
  ],
  "metadata": {
