cleaned up some language, particularly in the addendum

--- a/intransitive.ipynb
+++ b/intransitive.ipynb
@@ -9,21 +9,24 @@
     "\n",
     "## Nicholas S Georgescu\n",
     "\n",
-    "#### Published 2024-07-03; Edited 2024-07-08.\n",
+    "#### Published 2024-07-03; Edited 2024-07-22.\n",
     "\n",
-    "Intransitive (or Non-transitive) dice are dice which have a greater than 50% chance of winning in some kind of cyclical (rock-paper-scissors-like) pattern. For instance, Die A beats B, B beats C, and paradoxically enough, C beats A.  It seems unusual that such a thing could exist but, funnily enough, it can, and is [well documented](https://en.wikipedia.org/wiki/Intransitive_dice)\n",
+    "Intransitive (or Non-transitive) dice are dice which have a greater than 50% chance of winning in some kind of cyclical (rock-paper-scissors-like) pattern. For instance, Die A beats B, B beats C, and paradoxically enough, C beats A.  It seems unusual that such a thing could exist but, funnily enough, it can, and is [well documented](https://en.wikipedia.org/wiki/Intransitive_dice).  \n",
+    "\n",
+    "To intuitively understand how this might be possible, consider three dice, wherein each has (with duplicate on the opposite face) one low face (from {1,2,3}), one medium face (from {4,5,6}) and one high face (from {7,8,9}).  It is possible to construct the dice such that each die beats the next on two of the three faces by 1 and loses to the last by 2, with rotation through which face this happens.  So a die with faces (2,4,9) beats (1,6,8) on the highest and lowest faces, (3,5,7) beats (2,4,9) on the low/mid faces, and (1,6,8) beats (3,5,7) on the mid/high faces.  Thus e.g. a mid will beat a low and lose to a high, however, comparing low-to-low, mid-to-mid, and high-to-high, each will beat the next with a bias of 1, therefore out of the 9 possibilities one can win with probability 55.5%.\n",
+    "\n",
+    "*It should also be noted that dice are simply identified based on the lowest face.  Since dice should be uniquely valued, this is an adequate index to refer to a unique die in a set of dice.*\n",
     "\n",
     "So the question is how many dice do you need such that you can you find a die that will always beat some selection of dice by some other players?\n",
     "\n",
-    "Let's say you have only one friend.   Any set of three intransitive dice will work, because if they pick C, you pick B, etc.  But what about if you have two friends?  The same set will force you to lose to one and win to the other.  But we want to beat both!  If you try adding in two dice to bring the total to five dice, you'll find that again, it's possible for your friends to pick two dice that have no common winner.  (In rock-paper-scissors-lizard-Spock terms, think if they pick Spock and scissors. Rock, paper, and lizard lose to Spock, scissors, and scissors respectively.)\n",
+    "Let's say you have only one friend.   Any set of three intransitive dice (such as those above) will work, because if they pick die 3, you pick die 1, etc.  But what about if you have two friends?  The same set will force you to lose to one and win to the other.  But we want to beat both!  If you try adding in two dice to bring the total to five dice, you'll find that again, it's possible for your friends to pick two dice that have no common winner.  (In rock-paper-scissors-lizard-Spock terms, think if they pick Spock and scissors. Rock, paper, and lizard lose to Spock, scissors, and scissors respectively.  There is one other non-isomorphic dice-tournament directed graph structure but it can be shown that it runs into the same issue.)\n",
     "\n",
-    "It can be shown, however, that from a set of seven properly constructed dice, one can pull a die that beats any combination of two dice.  Thus the three-player game is solved with oskar's dice.\n",
+    "It can be shown, however, that from a set of 7 properly constructed dice, one can pull a die that beats any combination of two dice.  Thus the three-player game is solved with Oskar's dice.\n",
     "\n",
     "Can we make some combination that solves for four players?  Yes! (although I call that p=3 because I'm just interested in the adversarial players)\n",
     "\n",
     "Now let's start with a first attempt, which is a set of dice that I found long ago where each of the n dice beat the previous n//2 dice and lose to the next n//2 dice.\n",
-    "\n",
-    "It should also be noted that dice are simply numbered based on the lowest face.  Since dice should be uniquely valued, the "
+    "\n"
    ]
   },
   {
@@ -71,12 +74,6 @@
     "d = [[i,(i+n//2+1)%n+n, 3*n-1-(i*2+1)%n] for i in range(n)]\n",
     "print(tabulate(d))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1e5f253-be62-4054-8e89-8d7b33f6a3e4",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -188,9 +185,9 @@
    "id": "40885bae-89bd-4add-9e94-be23e90cede3",
    "metadata": {},
    "source": [
-    "While this approach works for 3 dice and 2 players, it actually runs into trouble if you have 3 players (and two adversaries).  For instance, nothing beats the combination of 0 and 3 selected by two opponents.\n",
+    "While this approach works for 3 dice and 2 players, it actually runs into trouble if you have 3 players (and two adversaries).  For instance, nothing beats the combination of 0 and 3 selected by two opponents (also stated that `(0,3)` represents a minimal dominating set)\n",
     "\n",
-    "Let's look at the literature for the three-player version to get some hints. Oskar's dice are three-sided dice (or doubled-up six-sided dice) that have some interesting properties.  I'll substract one off of all the faces to zero-index it, and show only the three-sided die version:"
+    "Let's look at the literature for the three-player version to get some hints. Oskar's dice are three-sided dice (or doubled-up six-sided dice) that have some interesting properties.  I'll substract one off of all the faces to zero-index it, and show only the non-duplicated (three-sided) die version:"
    ]
   },
   {
@@ -249,10 +246,9 @@
     "There are a few things to notice:\n",
     "\n",
     "- there's a low, medium and high face for each of the dice, and they are the numbers 0 through 6 offset by 7 each time.\n",
-    "- therefore we can just number each of the dice by the lowest face\n",
     "- the total of each die is the same\n",
-    "- the number of faces is (n-1)/2\n",
-    "- the \"middle die\", is 3 mod 7 for all the faces\n",
+    "- the number of faces is n//2, which is the same as the number of adversaries one needs to beat\n",
+    "- the \"middle die\", is = 3 (mod 7) for all the faces\n",
     "- the modulus is on rotation.  So it skips forward one on the lowest face, two on the highest, and four in the middle.  Take a look:"
    ]
   },
@@ -784,11 +780,15 @@
     "\n",
     "One will note that, from the references in [A362137 on the OEIS](https://oeis.org/A362137), it would seem as though the minimum set of dice required for solving this problem is 19.  So why use 23 dice?\n",
     "\n",
-    "In order for the constraints on the problem to hold, for some *n* number of dice, the numbers on the dice need to by uniquely valued.  One method of generating uniquely valued dice is to simply use modulo residues, therefore each die has a lowest face that is one cycle of this modulo residue, the next highest on each die is another, and so on.  It should be clear that primes are good candidates for these numbers because composite numbers will generate cycles within the modulo residues.\n",
+    "In order for the constraints on the problem to hold, for some *n* number of dice, the numbers on the dice need to by uniquely valued.  One method of generating uniquely valued dice is to simply use modulo residues, therefore each die has a lowest face that is one cycle of this modulo residue, the next highest on each die is another, and so on.  It should be clear that primes are good candidates for these numbers because composite numbers will generate subcycles within the modulo residues, and therefore you can't use any step factors with a common factor with n.\n",
     "\n",
-    "Note: I have not worked out the details on *why* the following is true:\n",
+    "But the other issue is that there's a property that these modulo residues should have which is that they should all add up to a constant value, since this would limit the search space significantly and intuitively seems likely to hold symmetrical-probability non-transitive dice that satisfy an n-player domination tournament, particularly for large (n,p).  We need this property to hold, because two things are true: \n",
+    "1. We need there to be an odd number of faces to the dice, because if we have even numbers of faces, we end up with dice that will tie each other, since for instance, they will win on two faces and lose on two faces to the next die.  To minimize the bias required for a die to beat the next, the number of faces must be odd. Thus even solutions (such as the columnar sum of step-series of s and n-s for all s<n) represent trivial solutions, since they don't actually apply a net bias.\n",
+    "2. the number of coprime modulo residues is going to be n-1 for an odd number n, therefore it will be even\n",
     "\n",
-    "But the other issue is that there's a property that these modulo residues should have which is that they should all add up to a constant value, since this would limit the search space significantly and intuitively seems likely to hold symmetrical-probability non-transitive dice that satisfy an n-player domination tournament, particularly for large (n,p). Consider the transposed (unsorted) o values for n=7 above, that is, a list of sublists, wherein each sublist represents the modulo residue cycles for repeated addition of some value r for the (1-indexed) r-th row:"
+    "Therefore we *need* to find odd-length subsets of these modulo residues that all add up to a constant value, since if we just take some combination of trivial even-length subsets we will end up with a bunch of dice that will have no bias and a win probability of 50% against each other.\n",
+    "\n",
+    "Consider the transposed (unsorted) o values for n=7 above, that is, a list of sublists, wherein each sublist represents the modulo residue cycles for repeated addition of some value r for the (1-indexed) r-th row:"
    ]
   },
   {
@@ -826,7 +826,11 @@
    "id": "9aaec01e-4aaf-4fdf-bd0e-1679ba1c47e3",
    "metadata": {},
    "source": [
-    "One can find a partitioned subset of the rows in the above array that gives constant values.  This only is true for (and I'm not sure why) primes = 7 (mod 8).  So for I have confirmed that this pattern holds for 7, 23, and 31, but not, critically, for 19, (nor any other number below 31). I conjecture that [this list](https://oeis.org/A007522) are the only candidates for n wherein a subset matrix of modulo resides (starting at n//2) along the rows can sum along the columns to a constant value.\n",
+    "One can find a partitioned odd-length subset of the rows in the above array that gives constant values.  \n",
+    "\n",
+    "Note: I have not worked out the details on *why* the following is true:\n",
+    "\n",
+    "This only is true for primes = 7 (mod 8).  So for I have confirmed that this pattern holds for 7, 23, and 31, but not, critically, for 19, (nor any other number below 31). I conjecture that [this list](https://oeis.org/A007522) are the only candidates for n wherein a subset matrix of modulo resides (starting at n//2) along the rows can sum along the columns to a constant value.\n",
     "\n",
     "Here is the solution for 23:"
    ]
