--- a/intransitive.ipynb
+++ b/intransitive.ipynb
@@ -768,7 +768,9 @@
    "id": "cf5a4f3c-12ad-4648-9166-de4f4d5887b4",
    "metadata": {},
    "source": [
-    "There you have it! 11-sided dice that have a 62/121 chance to beat the next die on the list.  That's a 51% but if it works for roulette tables at the casino, it works for me."
+    "There you have it! 11-sided dice that have a 62/121 chance to beat the next die on the list.  That's a 51% but if it works for roulette tables at the casino, it works for me.",
+    "Congratulations, I've been able to verify that your 23-dice with 11 sides apiece works for the 4-player domination tournament; however if you could re-check the wiki page for "Intransitive Dice", click on the "view history" link, then look for 8 May 2024.",
+    "The contributor at that time posted a set of dice named: Marshall-23. Since you already have your set of dice verified, could you re-run your verification algorithm for the Marshall-23 set as well? That set was taken down due to it not having an academically cited source to back it up." 
    ]
   },
   {
