added 6 player solution and edited 4 player solution

--- a/intransitive.ipynb
+++ b/intransitive.ipynb
@@ -7,9 +7,15 @@
    "source": [
     "# Solving the Four-Player Intransitive Dice Problem\n",
     "\n",
-    "## Nicholas S Georgescu\n",
+    "#### Published 2024-07-03; Edited 2025-08-06\n",
     "\n",
-    "#### Published 2024-07-03; Edited 2024-07-22.\n",
+    "## A Note on the Timeline\n",
+    "\n",
+    "So it should be noted I was contacted by [John Robert Marshall](https://github.com/giannileuani/) regarding my solution and verifiably had a working solution for the four-player non-transitive dice problem isomorphic to the one laid out here.  While they did not publish a five-player solution, the four-player solution naturally can be extended into a five- and even six-player solution for non-transitive dice. \n",
+    "\n",
+    "Also, following my initial publication of this notebook, I was also contacted by [Youhua Li](https://github.com/YouhuaLi) who had a solution that used fewer dice. I have proven [in a subsequent notebook](https://github.com/NGeorgescu/math_problems/blob/main/intransitive_6_player.ipynb) that both solutions for the dice, when extended in to the five- and six- player space, represent working solutions to the problem.\n",
+    "\n",
+    "## Introduction\n",
     "\n",
     "Intransitive (or Non-transitive) dice are dice which have a greater than 50% chance of winning in some kind of cyclical (rock-paper-scissors-like) pattern. For instance, Die A beats B, B beats C, and paradoxically enough, C beats A.  It seems unusual that such a thing could exist but, funnily enough, it can, and is [well documented](https://en.wikipedia.org/wiki/Intransitive_dice).  \n",
     "\n",
@@ -881,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
